environments/gloo-gateway/gateway-api/1.17/with-gm-istio/httpbin-app/base/httpbin-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    istio.io/rev: 1-23
