environments/gloo-gateway/gateway-api/1.17/with-gm-istio/httpbin-app/base/httpbin-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-policy
  namespace: httpbin  # Replace with the namespace of your httpbin app
spec:
  selector:
    matchLabels:
      app: httpbin  # Replace with the labels of your httpbin app
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:  # Replace with the namespace(s) you want to allow access from
        - client
        - gloo-system
    - source:
        principals:   # Replace with the service account(s) you want to allow access from
        - cluster.local/ns/client/sa/in-mesh-client
        - cluster.local/ns/gloo-system/sa/gloo-proxy-https
    to:
    - operation:
        methods: ["GET"]  # Specify the HTTP methods you want to allow
        paths: ["/*"]  # Specify the paths you want to allow access to
